--- a/contacto.html
+++ b/contacto.html
@@ -65,5 +65,14 @@
             document.getElementById('nav-links').classList.toggle('active');
         });
     </script>
+    <script>
+        document.getElementById('mobile-menu').addEventListener('click', () => {
+            document.getElementById('nav-links').classList.toggle('active');
+        });
+    </script>
+    
+    <script src="js/logic.js"></script> 
+</body>
+</html>
 </body>
 </html>
