--- a/planes.html
+++ b/planes.html
@@ -35,7 +35,7 @@
                     <li><i class='bx bx-x' style="color: #666;"></i> Sin Hardening AppArmor</li>
                     <li><i class='bx bx-x' style="color: #666;"></i> Soporte Básico</li>
                 </ul>
-                <button class="btn-submit" style="background: transparent; border: 1px solid var(--primary); color: #fff; margin-top: 2rem;">Solicitar</button>
+                <a href="pasarela.html?plan=personal&precio=0" class="btn-submit" style="display:inline-block; text-align:center; background: transparent; border: 1px solid var(--primary); color: #fff; margin-top: 2rem; text-decoration: none;">Solicitar</a>
             </div>
 
             <div class="glass-card plan-card premium">
@@ -49,7 +49,7 @@
                     <li><i class='bx bx-check-circle'></i> Configuración Firewall UFW</li>
                     <li><i class='bx bx-check-circle'></i> Simulación de Ataques</li>
                 </ul>
-                <button class="btn-submit" style="margin-top: 2rem;">Contratar Escudo</button>
+                <a href="pasarela.html?plan=empresarial&precio=consultar" class="btn-submit" style="display:inline-block; text-align:center; margin-top: 2rem; text-decoration: none;">Contratar Escudo</a>
             </div>
         </div>
     </main>
