Actualizacion FINAL 2 SALIDA A GOOGLE

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SecureShield - Ciberseguridad y Servidores Linux en España</title>
+    <meta name="description" content="SecureShield ofrece soluciones de ciberseguridad, auditoría de servidores Linux y hardening con AppArmor en España. Protege tu infraestructura con defensa en profundidad.">
     <link rel="icon" type="image/png" href="images/shield.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
@@ -59,7 +60,16 @@
             </div>
         </div>
     </section>
-
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; 2024 SecurityShield - Proyecto TFG</p>
+            <div class="social-links">
+                <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank" rel="noopener noreferrer" title="Ver código fuente en GitHub">
+                    <i class='bx bxl-github'></i> Código Fuente
+                </a>
+            </div>
+        </div>
+    </footer>
     <script>
         const menuBtn = document.getElementById('mobile-menu');
         const navLinks = document.getElementById('nav-links');
