--- a/pasarela.html
+++ b/pasarela.html
@@ -105,7 +105,16 @@
             </p>
         </div>
     </div>
-
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; 2024 SecurityShield - Proyecto TFG</p>
+            <div class="social-links">
+                <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank" rel="noopener noreferrer" title="Ver código fuente en GitHub">
+                    <i class='bx bxl-github'></i> Código Fuente
+                </a>
+            </div>
+        </div>
+    </footer>
     <script src="js/payment.js"></script>
 </body>
 </html>
