--- a/login.html
+++ b/login.html
@@ -43,5 +43,15 @@
             </form>
         </div>
     </div>
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; 2024 SecurityShield - Proyecto TFG</p>
+            <div class="social-links">
+                <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank" rel="noopener noreferrer" title="Ver código fuente en GitHub">
+                    <i class='bx bxl-github'></i> Código Fuente
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
