--- a/planes.html
+++ b/planes.html
@@ -67,7 +67,16 @@
             </div>
         </div>
     </main>
-
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; 2024 SecurityShield - Proyecto TFG</p>
+            <div class="social-links">
+                <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank" rel="noopener noreferrer" title="Ver código fuente en GitHub">
+                    <i class='bx bxl-github'></i> Código Fuente
+                </a>
+            </div>
+        </div>
+    </footer>
     <script>
         document.getElementById('mobile-menu').addEventListener('click', () => {
             document.getElementById('nav-links').classList.toggle('active');
