Actualizacion FINAL 3 SALIDA A GOOGLE

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SecureShield - Ciberseguridad y Servidores Linux en España</title>
     <meta name="description" content="SecureShield ofrece soluciones de ciberseguridad, auditoría de servidores Linux y hardening con AppArmor en España. Protege tu infraestructura con defensa en profundidad.">
+    <meta name="google-site-verification" content="1I3Blcix2SiJoX3-R6Cp4xLIqJGl29Q3ic8fjAnSzXU" />
     <link rel="icon" type="image/png" href="images/shield.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
