Actualizacion SALIDA A GOOGLE ETIQUETAS META (IMAGENES, WHATSAPP, DISCORD, ETC...)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>SecureShield - Ciberseguridad y Servidores Linux en España</title>
     <meta name="description" content="SecureShield ofrece soluciones de ciberseguridad, auditoría de servidores Linux y hardening con AppArmor en España. Protege tu infraestructura con defensa en profundidad.">
     <meta name="google-site-verification" content="1I3Blcix2SiJoX3-R6Cp4xLIqJGl29Q3ic8fjAnSzXU" />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://securityshield.es/">
+    <meta property="og:title" content="SecureShield - Ciberseguridad y Servidores Linux">
+    <meta property="og:description" content="Auditoría de sistemas, Hardening con AppArmor y defensa en profundidad. Protege tu infraestructura hoy.">
+    <meta property="og:image" content="https://securityshield.es/images/shield.png">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://securityshield.es/">
+    <meta property="twitter:title" content="SecureShield - Ciberseguridad">
+    <meta property="twitter:description" content="Auditoría de sistemas, Hardening con AppArmor y defensa en profundidad.">
+    <meta property="twitter:image" content="https://securityshield.es/images/shield.png">
     <link rel="icon" type="image/png" href="images/shield.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
