--- a/login.html
+++ b/login.html
@@ -41,6 +41,12 @@
 
                 <button type="submit" class="btn-login" style="width:100%; margin-top:1rem;" data-i18n="btn_enter">Entrar al Panel</button>
             </form>
+        <div style="margin-top: 1.5rem; text-align: center; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 1rem;">
+            <p style="color: var(--text-muted); font-size: 0.9rem;">¿Nuevo en el Lab?</p>
+            <a href="registro.html" class="btn-submit" style="background: transparent; border: 1px solid var(--primary); color: white; margin-top: 0.5rem; padding: 0.5rem 1rem; width: 100%; text-decoration: none; display: inline-block;">
+                Crear Cuenta
+            </a>
+        </div>
         </div>
     </div>
     <footer class="footer">
