Actualizacion URLs amigables

--- a/contacto.html
+++ b/contacto.html
@@ -15,10 +15,10 @@
         <div class="logo"><i class='bx bxs-shield-plus'></i> SecurityShield</div>
         <div class="menu-toggle" id="mobile-menu"><i class='bx bx-menu'></i></div>
         <ul class="nav-links" id="nav-links">
-            <li><a href="index.html" data-i18n="nav_inicio">Inicio</a></li>
-            <li><a href="planes.html" data-i18n="nav_planes">Planes</a></li>
-            <li><a href="contacto.html" class="active" data-i18n="nav_contacto">Contacto</a></li>
-            <li><a href="login.html" class="btn-login" data-i18n="nav_login">Acceso Lab</a></li>
+            <li><a href="index" data-i18n="nav_inicio">Inicio</a></li>
+            <li><a href="planes" data-i18n="nav_planes">Planes</a></li>
+            <li><a href="contacto" class="active" data-i18n="nav_contacto">Contacto</a></li>
+            <li><a href="login" class="btn-login" data-i18n="nav_login">Acceso Lab</a></li>
             <li>
                 <select id="language-selector" class="lang-select">
                     <option value="es">🇪🇸 ES</option>
