--- a/pasarela.html
+++ b/pasarela.html
@@ -57,7 +57,7 @@
                 <option value="ca">🏴 CA</option>
                 <option value="eu">🏴 EU</option>
             </select>
-            <a href="planes.html" style="color: white; font-size: 1.5rem;"><i class='bx bx-x'></i></a>
+            <a href="planes" style="color: white; font-size: 1.5rem;"><i class='bx bx-x'></i></a>
         </div>
     </nav>
 
