--- a/registro.html
+++ b/registro.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="logo"><i class='bx bxs-shield-plus'></i> SecurityShield</div>
-        <a href="index.html" style="color: white; font-size: 1.5rem;"><i class='bx bx-x'></i></a>
+        <a href="index" style="color: white; font-size: 1.5rem;"><i class='bx bx-x'></i></a>
     </nav>
 
     <div class="login-container">
