--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <i class='bx bx-menu'></i>
         </div>
         <ul class="nav-links" id="nav-links">
-            <li><a href="index.html" class="active" data-i18n="nav_inicio">Inicio</a></li>
-            <li><a href="planes.html" data-i18n="nav_planes">Planes</a></li>
-            <li><a href="contacto.html" data-i18n="nav_contacto">Contacto</a></li>
-            <li><a href="login.html" class="btn-login" data-i18n="nav_login">Acceso Lab</a></li>
+            <li><a href="index" class="active" data-i18n="nav_inicio">Inicio</a></li>
+            <li><a href="planes" data-i18n="nav_planes">Planes</a></li>
+            <li><a href="contacto" data-i18n="nav_contacto">Contacto</a></li>
+            <li><a href="login" class="btn-login" data-i18n="nav_login">Acceso Lab</a></li>
             <li>
                 <select id="language-selector" class="lang-select">
                     <option value="es">🇪🇸 ES</option>
