Actualizacion sin .htaccess

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <i class='bx bx-menu'></i>
         </div>
         <ul class="nav-links" id="nav-links">
-            <li><a href="index" class="active" data-i18n="nav_inicio">Inicio</a></li>
+            <li><a href="./" class="active" data-i18n="nav_inicio">Inicio</a></li>
             <li><a href="planes" data-i18n="nav_planes">Planes</a></li>
             <li><a href="contacto" data-i18n="nav_contacto">Contacto</a></li>
             <li><a href="login" class="btn-login" data-i18n="nav_login">Acceso Lab</a></li>
@@ -48,7 +48,7 @@
     <main class="container hero">
         <h1 data-i18n="hero_title">Defensa en Profundidad</h1>
         <p data-i18n="hero_text">Un usuario informado es la barrera más eficaz. Protegemos tu infraestructura con estrategias proactivas y auditorías avanzadas.</p>
-        <a href="planes.html" class="btn-submit" style="display:inline-block; width:auto; padding: 1rem 3rem;">
+        <a href="planes" class="btn-submit" style="display:inline-block; width:auto; padding: 1rem 3rem;">
             <span data-i18n="hero_btn">Ver Soluciones</span>
         </a>
     </main>
