--- a/planes.html
+++ b/planes.html
@@ -45,7 +45,7 @@
                     <li><i class='bx bx-x' style="color: #666;"></i> <span data-i18n="feat_no_armor">Sin Hardening AppArmor</span></li>
                     <li><i class='bx bx-x' style="color: #666;"></i> <span data-i18n="feat_support">Soporte Básico</span></li>
                 </ul>
-                <a href="pasarela.html?plan=personal&precio=0" class="btn-submit" style="display:inline-block; text-align:center; background: transparent; border: 1px solid var(--primary); color: #fff; margin-top: 2rem; text-decoration: none;">
+                <a href="pasarela?plan=personal&precio=0" class="btn-submit" style="display:inline-block; text-align:center; background: transparent; border: 1px solid var(--primary); color: #fff; margin-top: 2rem; text-decoration: none;">
                     <span data-i18n="btn_request">Solicitar</span>
                 </a>
             </div>
@@ -61,7 +61,7 @@
                     <li><i class='bx bx-check-circle'></i> <span data-i18n="feat_fw">Configuración Firewall UFW</span></li>
                     <li><i class='bx bx-check-circle'></i> <span data-i18n="feat_sim">Simulación de Ataques</span></li>
                 </ul>
-                <a href="pasarela.html?plan=empresarial&precio=consultar" class="btn-submit" style="display:inline-block; text-align:center; margin-top: 2rem; text-decoration: none;">
+                <a href="pasarela?plan=empresarial&precio=consultar" class="btn-submit" style="display:inline-block; text-align:center; margin-top: 2rem; text-decoration: none;">
                     <span data-i18n="btn_hire">Contratar Escudo</span>
                 </a>
             </div>
