--- a/registro.html
+++ b/registro.html
@@ -37,7 +37,7 @@
             </form>
             
             <div style="margin-top: 1rem; text-align: center; font-size: 0.9rem;">
-                <p style="color: var(--text-muted);">¿Ya tienes cuenta? <a href="login.html" style="color: var(--primary);">Inicia Sesión</a></p>
+                <p style="color: var(--text-muted);">¿Ya tienes cuenta? <a href="login" style="color: var(--primary);">Inicia Sesión</a></p>
             </div>
         </div>
     </div>
