--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
                 <option value="ca">🏴 CA</option>
                 <option value="eu">🏴 EU</option>
             </select>
-            <a href="index.html" style="color: white; font-size: 1.5rem;"><i class='bx bx-x'></i></a>
+            <a href="index" style="color: white; font-size: 1.5rem;"><i class='bx bx-x'></i></a>
         </div>
     </nav>
 
@@ -43,7 +43,7 @@
             </form>
         <div style="margin-top: 1.5rem; text-align: center; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 1rem;">
             <p style="color: var(--text-muted); font-size: 0.9rem;">¿Nuevo en el Lab?</p>
-            <a href="registro.html" class="btn-submit" style="background: transparent; border: 1px solid var(--primary); color: white; margin-top: 0.5rem; padding: 0.5rem 1rem; width: 100%; text-decoration: none; display: inline-block;">
+            <a href="registro" class="btn-submit" style="background: transparent; border: 1px solid var(--primary); color: white; margin-top: 0.5rem; padding: 0.5rem 1rem; width: 100%; text-decoration: none; display: inline-block;">
                 Crear Cuenta
             </a>
         </div>
