Actualizacion search social media

--- a/contacto.html
+++ b/contacto.html
@@ -8,6 +8,17 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/translations.js"></script>
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://securityshield.es/contacto">
+    <meta property="og:title" content="Contacta con el Equipo Red & Blue Team - SecurityShield">
+    <meta property="og:description" content="¿Necesitas una auditoría o formación? Contacta con nuestros especialistas en hardening y seguridad ofensiva en Zaragoza.">
+    <meta property="og:image" content="https://securityshield.es/images/social-preview.jpg">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://securityshield.es/contacto">
+    <meta property="twitter:title" content="Contacta con el Equipo - SecurityShield">
+    <meta property="twitter:description" content="Contacta con nuestros especialistas en hardening y seguridad ofensiva.">
+    <meta property="twitter:image" content="https://securityshield.es/images/social-preview.jpg">
 </head>
 <body>
 
