--- a/planes.html
+++ b/planes.html
@@ -8,6 +8,17 @@
     <link rel="icon" type="image/png" href="images/shield.png">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/translations.js"></script>
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://securityshield.es/planes">
+    <meta property="og:title" content="Planes de Ciberseguridad - SecurityShield">
+    <meta property="og:description" content="Elige tu nivel de protección: Desde auditorías gratuitas hasta defensa empresarial completa con AppArmor y Bastionado.">
+    <meta property="og:image" content="https://securityshield.es/images/social-preview.jpg">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://securityshield.es/planes">
+    <meta property="twitter:title" content="Planes de Ciberseguridad - SecurityShield">
+    <meta property="twitter:description" content="Elige tu nivel de protección: Desde auditorías gratuitas hasta defensa empresarial completa.">
+    <meta property="twitter:image" content="https://securityshield.es/images/social-preview.jpg">
 </head>
 <body>
 
