--- a/index.html
+++ b/index.html
@@ -9,18 +9,31 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://securityshield.es/">
     <meta property="og:title" content="SecureShield - Ciberseguridad y Servidores Linux">
-    <meta property="og:description" content="Auditoría de sistemas, Hardening con AppArmor y defensa en profundidad. Protege tu infraestructura hoy.">
-    <meta property="og:image" content="https://securityshield.es/images/shield.png">
+    <meta property="og:description" content="Auditoría de sistemas, Hardening con AppArmor y defensa en profundidad.">
+    <meta property="og:image" content="https://securityshield.es/images/social-preview.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://securityshield.es/">
     <meta property="twitter:title" content="SecureShield - Ciberseguridad">
     <meta property="twitter:description" content="Auditoría de sistemas, Hardening con AppArmor y defensa en profundidad.">
-    <meta property="twitter:image" content="https://securityshield.es/images/shield.png">
+    <meta property="twitter:image" content="https://securityshield.es/images/social-preview.jpg">
     <link rel="icon" type="image/png" href="images/shield.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/translations.js"></script>
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "SecureShield",
+    "url": "https://securityshield.es",
+    "logo": "https://securityshield.es/images/shield.png",
+    "image": "https://securityshield.es/images/social-preview.jpg",
+    "description": "Soluciones de ciberseguridad y hardening de servidores Linux."
+    }
+    </script>
 </head>
 <body>
 
