--- a/registro.html
+++ b/registro.html
@@ -6,6 +6,17 @@
     <title>Crear Cuenta - SecurityShield</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
+        <meta property="og:type" content="website">
+    <meta property="og:url" content="https://securityshield.es/login">
+    <meta property="og:title" content="Acceso al Laboratorio - SecurityShield">
+    <meta property="og:description" content="Inicia sesión o regístrate para acceder al panel de control y herramientas de auditoría.">
+    <meta property="og:image" content="https://securityshield.es/images/social-preview.jpg">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://securityshield.es/login">
+    <meta property="twitter:title" content="Acceso al Laboratorio - SecurityShield">
+    <meta property="twitter:description" content="Inicia sesión o regístrate para acceder al panel de control.">
+    <meta property="twitter:image" content="https://securityshield.es/images/social-preview.jpg">
 </head>
 <body>
     <nav class="navbar">
