--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <link rel="icon" type="image/png" href="images/shield.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/translations.js"></script>
     <script type="application/ld+json">
     {
     "@context": "https://schema.org",
@@ -85,16 +84,25 @@
             </div>
         </div>
     </section>
-    <footer class="footer">
-        <div class="footer-content">
-            <p>&copy; 2026 SecurityShield - Proyecto TFG</p>
-            <div class="social-links">
-                <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank" rel="noopener noreferrer" title="Ver código fuente en GitHub">
-                    <i class='bx bxl-github'></i> Código Fuente
-                </a>
-            </div>
+<footer class="footer">
+    <div class="footer-content">
+        <p>&copy; 2026 SecurityShield - Proyecto TFG</p>
+        
+        <p style="margin-top: 0.5rem; font-size: 0.9rem;">
+            <i class='bx bx-envelope'></i> 
+            <a href="mailto:contact@securityshield.es" style="color: rgba(255,255,255,0.7); text-decoration: none; transition: color 0.3s;">
+                contact@securityshield.es
+            </a>
+        </p>
+
+        <div class="social-links">
+            <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank" rel="noopener noreferrer" title="Ver código fuente en GitHub">
+                <i class='bx bxl-github'></i> Código Fuente
+            </a>
         </div>
-    </footer>
+    </div>
+</footer>
+    <script src="js/translations.js"></script>
     <script>
         const menuBtn = document.getElementById('mobile-menu');
         const navLinks = document.getElementById('nav-links');
