--- a/pasarela.html
+++ b/pasarela.html
@@ -7,7 +7,6 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" type="image/png" href="images/shield.png">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/translations.js"></script>
     <style>
         .payment-container {
             display: flex;
@@ -107,7 +106,15 @@
     </div>
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2026 SecurityShield - Proyecto TFG</p>
+            <p>&copy; 2026 SecurityShield - Proyecto PIM - Defensa de Servidor Web</p>
+            
+            <p style="margin-top: 0.5rem; font-size: 0.9rem;">
+                <i class='bx bx-envelope'></i> 
+                <a href="mailto:contact@securityshield.es" style="color: rgba(255,255,255,0.7); text-decoration: none; transition: color 0.3s;">
+                    contact@securityshield.es
+                </a>
+            </p>
+
             <div class="social-links">
                 <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank" rel="noopener noreferrer" title="Ver código fuente en GitHub">
                     <i class='bx bxl-github'></i> Código Fuente
@@ -116,5 +123,6 @@
         </div>
     </footer>
     <script src="js/payment.js"></script>
+    <script src="js/translations.js"></script>
 </body>
 </html>
