--- a/planes.html
+++ b/planes.html
@@ -6,8 +6,7 @@
     <title>Planes - SecurityShield</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" type="image/png" href="images/shield.png">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/translations.js"></script>
+    <link rel="stylesheet" href="css/style.css">    
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://securityshield.es/planes">
     <meta property="og:title" content="Planes de Ciberseguridad - SecurityShield">
@@ -80,7 +79,15 @@
     </main>
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2026 SecurityShield - Proyecto TFG</p>
+            <p>&copy; 2026 SecurityShield - Proyecto PIM - Defensa de Servidor Web</p>
+            
+            <p style="margin-top: 0.5rem; font-size: 0.9rem;">
+                <i class='bx bx-envelope'></i> 
+                <a href="mailto:contact@securityshield.es" style="color: rgba(255,255,255,0.7); text-decoration: none; transition: color 0.3s;">
+                    contact@securityshield.es
+                </a>
+            </p>
+
             <div class="social-links">
                 <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank" rel="noopener noreferrer" title="Ver código fuente en GitHub">
                     <i class='bx bxl-github'></i> Código Fuente
@@ -88,6 +95,7 @@
             </div>
         </div>
     </footer>
+    <script src="js/translations.js"></script>
     <script>
         document.getElementById('mobile-menu').addEventListener('click', () => {
             document.getElementById('nav-links').classList.toggle('active');
