Actualizacion 1.1 traducciones y footer

--- a/index.html
+++ b/index.html
@@ -84,24 +84,24 @@
             </div>
         </div>
     </section>
-<footer class="footer">
-    <div class="footer-content">
-        <p>&copy; 2026 SecurityShield - Proyecto TFG</p>
-        
-        <p style="margin-top: 0.5rem; font-size: 0.9rem;">
-            <i class='bx bx-envelope'></i> 
-            <a href="mailto:contact@securityshield.es" style="color: rgba(255,255,255,0.7); text-decoration: none; transition: color 0.3s;">
-                contact@securityshield.es
-            </a>
-        </p>
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; 2026 SecurityShield - Proyecto PIM - Defensa de Servidor Web</p>
+            
+            <p style="margin-top: 0.5rem; font-size: 0.9rem;">
+                <i class='bx bx-envelope'></i> 
+                <a href="mailto:contact@securityshield.es" style="color: rgba(255,255,255,0.7); text-decoration: none; transition: color 0.3s;">
+                    contact@securityshield.es
+                </a>
+            </p>
 
-        <div class="social-links">
-            <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank" rel="noopener noreferrer" title="Ver código fuente en GitHub">
-                <i class='bx bxl-github'></i> Código Fuente
-            </a>
+            <div class="social-links">
+                <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank" rel="noopener noreferrer" title="Ver código fuente en GitHub">
+                    <i class='bx bxl-github'></i> Código Fuente
+                </a>
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
     <script src="js/translations.js"></script>
     <script>
         const menuBtn = document.getElementById('mobile-menu');
